# mini-allocator

./: README.md
app/: myapp.c  myapp.h
lib/: CMakeLists.txt
lib/include/: memlib.h  mm.h
lib/src/: memlib.c  mm.c
test/: CMakeLists.txt  external-test.cpp  mm-test.cpp
